updates all sections

--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Education}
+\cvsection{Formation}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
@@ -13,16 +13,55 @@
 %------------------------------------------------
 
 \cventry
-{B.S. in Computer Science and Engineering} % Degree
-{POSTECH(Pohang University of Science and Technology)} % Institution
-{Pohang, S.Korea} % Location
-{Mar. 2010 - PRESENT} % Date(s)
+{Diplômé} % Status
+{Master 2 (M2), Statistique et Informatique Décisionnelle} % Degree
+{Université Paul Sabatier Toulouse III} % Institution
+{2018 - 2021} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
-\item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+\item {Projet de Master: Développement d'un algorithme de recommandation pour Sens Critique}
+\item {Spécialisation en NLP (Natural Language Processing) et techniques d'analyse avancées}
+\end{cvitems}
+}
+\vspace{1.5em}
+
+%------------------------------------------------
+
+\cventry
+{Diplômé} % Status
+{Licence 3, Mathématiques Appliquées aux Sciences Humaines et Sociales} % Degree
+{Université Toulouse - Jean Jaurès} % Institution
+{2017 - 2018} % Date(s)
+{ % Description(s) bullet points
+\begin{cvitems}
 \end{cvitems}
 }
 
 %------------------------------------------------
+
+\end{cventries}
+
+%------------------------------------------------
+%	SECTION TITLE
+%----------------------------------------------------------------------------------------
+
+\cvsection{Certifications}
+
+%----------------------------------------------------------------------------------------
+%	SECTION CONTENT
+%----------------------------------------------------------------------------------------
+
+\begin{cventries}
+
+\cventry
+{En cours d'obtention} % Status
+{Azure Data Engineer Associate} % Certification
+{Microsoft} % Institution
+{2025} % Date(s)
+{ % Description(s) bullet points
+\begin{cvitems}
+\item {Certification axée sur la conception et l'implémentation de solutions de données sur Azure}
+\end{cvitems}
+}
 
 \end{cventries}
