--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Skills}
+\cvsection{Compétences}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
@@ -13,21 +13,73 @@
 %------------------------------------------------
 
 \cvskill
-{Programming} % Category
-{Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+{Technologies Cloud} % Category
+{Azure, AWS, Déploiement CI/CD, Conteneurisation, Serverless} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Web} % Category
-{Django with Python, Express with Node.JS, HTML5, LESS} % Skills
+{Intelligence Artificielle} % Category
+{NLP, LLM Fine-tuning, Computer Vision, Modèles Prédictifs, Anomaly Detection} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Languages} % Category
-{Korean, English, Japanese, Chinese} % Skills
+{Développement Full-Stack} % Category
+{React, Node.js, Python, API REST, CSS, Tailwind} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Base de données} % Category
+{PostgreSQL, Prisma, Neon, MongoDB, Neo4j, Data Warehousing, ETL} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{DevOps} % Category
+{Git, Docker, Kubernetes} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Langages de programmation} % Category
+{Python, JavaScript, TypeScript, C\#} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Développement 3D} % Category
+{Unity (scripts, animations), Intégration fonctionnelle} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Entrepreneuriat} % Category
+{Identification de niches, Modèle SaaS, Analyse de marché, Business Planning} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Langues} % Category
+{Français (natif), Anglais (professionnel)} % Skills
 
 %------------------------------------------------
 
 \end{cvskills}
+\vspace{1.5em}
+
+%----------------------------------------------------------------------------------------
+%	SECTION TITLE
+%----------------------------------------------------------------------------------------
+
+\cvsection{Profil personnel}
+
+%----------------------------------------------------------------------------------------
+%	SECTION CONTENT
+%----------------------------------------------------------------------------------------
+
+\begin{cvparagraph}
+Ingénieur full-stack spécialisé dans la création de solutions SaaS et l'application de technologies avancées aux besoins métier. Expérience internationale acquise au Danemark. Capacité à identifier des marchés de niche et à développer rapidement des produits end-to-end avec des équipes restreintes. Approche pragmatique privilégiant l'agilité et l'innovation. Particulièrement efficace en startup et environnements dynamiques.
+\end{cvparagraph}
+\vspace{1.5em}
