--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -33,7 +33,7 @@
 \fontdir[fonts/] % Specify the location of the included fonts
 
 % Color for highlights
-\colorlet{awesome}{awesome-red} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
+\colorlet{awesome}{awesome-skyblue} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
 %\definecolor{awesome}{HTML}{CA63A8} % Uncomment if you would like to specify your own color
 
 % Colors for text - uncomment and modify
@@ -49,39 +49,40 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Claud D.}{Park}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
-\mobile{(+82) 10-9030-1843}
+\name{Manoel}{Da Ponte}
+\address{Avenue Emmanuel Maignan, Toulouse, France}
+\mobile{(+33) 6 82 69 71 32}
 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
-%\skype{skypeid}
+\email{daponte.manoel@gmail.com}
+%\homepage{www.example.com}
+%\github{username}
+%\linkedin{username}
+%\skype{username}
 %\stackoverflow{SOid}{SOname}
-%\twitter{@twit}
+%\twitter{@username}
+\extrainfo{Permis B + véhicule}
 
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert} % Your expertise/fields
-\quote{``Make the change that you want to see in the world."} % A quote or statement
+\position{Ingénieur Data Scientist} % Your expertise/fields
+\quote{Spécialisé dans le traitement de données (image, texte, son, numérique) de leur collection à leur utilisation dans la prise de décision} % A quote or statement
 
 %----------------------------------------------------------------------------------------
 %	RECIPIENT/POSITION/LETTER INFORMATION
 %	All of the below lines must be filled out
 %----------------------------------------------------------------------------------------
 
-\recipient{Company Recruitment Team}{Initech Inc.\\4120 Freidrich Ln.\\Austin, TX 78744} % The company being applied to
+\recipient{Service des Ressources Humaines}{Nom de l'Entreprise\\Adresse de l'Entreprise\\Code Postal, Ville} % The company being applied to
 
 \letterdate{\today} % The date on the letter, default is the date of compilation
 
-\lettertitle{Job Application for Middle Manager} % The title of the letter
+\lettertitle{Candidature au poste d'Ingénieur Data Scientist} % The title of the letter
 
-\letteropening{Dear Mr./Ms./Dr. LastName,} % How the letter is opened
+\letteropening{Madame, Monsieur,} % How the letter is opened
 
-\letterclosing{Sincerely,} % How the letter is closed
+\letterclosing{Je vous prie d'agréer, Madame, Monsieur, l'expression de mes salutations distinguées.} % How the letter is closed
 
-\letterenclosure[Attached]{Curriculum Vitae} % Any enclosures with the letter
+\letterenclosure[Pièces jointes]{Curriculum Vitae} % Any enclosures with the letter
 
-\makecvfooter{\today}{Claud D. Park~~~·~~~Cover Letter}{} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
+\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Lettre de Motivation}{} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
   
 %----------------------------------------------------------------------------------------
 
@@ -99,21 +100,23 @@
 
 %------------------------------------------------
 
-\lettersection{About Me}
+\lettersection{Objet de ma candidature}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
-
-%------------------------------------------------
-
-\lettersection{Why Initech?}
-
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+Actuellement étudiant en Master Statistiques et Informatique Décisionnelle, je suis à la recherche d'une opportunité dans le domaine de la Data Science où je pourrai mettre à profit mes compétences en traitement et analyse de données. Avec plus de deux ans d'expérience professionnelle dans le domaine, je suis convaincu de pouvoir apporter une contribution significative à votre équipe.
 
 %------------------------------------------------
 
-\lettersection{Why Me?}
+\lettersection{Mes compétences et expériences}
 
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+Au cours de mon parcours, j'ai acquis une solide expertise en Python, R, SQL et diverses technologies de data science. Mon alternance actuelle chez CGI m'a permis de travailler sur la création et l'intégration d'un Chat Bot dans une application de gestion des ressources humaines, renforçant ainsi mes compétences en NLP et en développement d'applications intelligentes.
+
+Mes expériences précédentes chez Capgemini et Sopra Stéria m'ont formé à la détection d'anomalies, aux prédictions algorithmiques et au déploiement d'outils d'analyse. J'ai également participé à des compétitions Kaggle, notamment sur des problématiques de classification et de traitement équitable des données (fairness).
+
+%------------------------------------------------
+
+\lettersection{Ma motivation}
+
+Je suis particulièrement attiré par [mentionner ici un aspect spécifique de l'entreprise ou du poste] car cela correspond parfaitement à mon projet professionnel de développer des solutions data innovantes et éthiques. Personne motivée et disciplinée, je trouve de la joie à collaborer avec les autres et j'apprécie les environnements de travail dynamiques où l'apprentissage continu est valorisé.
 
 %------------------------------------------------
 
