--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Experience}
+\cvsection{Expérience Professionnelle}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
@@ -13,83 +13,105 @@
 %------------------------------------------------
 
 \cventry
-{Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-{R.O.K Cyber Command, MND} % Organization
-{Seoul, S.Korea} % Location
-{Aug. 2014 - Exp. Apr. 2016} % Date(s)
+{Chief Technology Officer \& Cofondateur} % Job title
+{Wise Twin} % Organization
+{Toulouse, France} % Location
+{Avril 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-\item {Improved functionality on military command and control system for incident response with Java Servlet.}
-\item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
+\item {Création et commercialisation de 3 formations sur mesure pour différents organismes, incluant H2V parmi nos clients}
+\item {Développement de technologies d'intégration pour optimiser les builds dans des projets React et réduire les temps de réponse}
+\item {Conception et déploiement de solutions SaaS B2B avec une approche orientée entreprise}
+\item {Supervision complète du cycle de développement, de la conception à la mise en production}
+\item {Technologies: React, Node.js, AWS, Cloud Serverless, MongoDB}
 \end{cvitems}
 }
-
-%------------------------------------------------    
-
-\cventry
-{Game Developer Intern at Global Internship Program} % Job title
-{NEXON} % Organization
-{Seoul, S.Korea \& LA, U.S.A} % Location
-{Jan. 2013 - Feb. 2013} % Date(s)
-{ % Description(s) of tasks/responsibilities
-\begin{cvitems}
-\item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market. Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic, designed game graphics.}
-\item {Won the 2nd prize in final evaluation.}
-\end{cvitems}
-}
+\vspace{1.5em}
 
 %------------------------------------------------
 
 \cventry
-{Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-{Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-{Pohang, S.Korea} % Location
-{Sep. 2012 - Feb. 2013} % Date(s)
+{Fondateur \& Développeur Full Stack} % Job title
+{Bootstrap-Now} % Organization
+{Toulouse, France} % Location
+{Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-\item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-\end{cvitems} 
-}
-
-%------------------------------------------------
-
-\cventry
-{Software Engineer Trainee} % Job title
-{Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-{Seoul, S.Korea} % Location
-{Jul. 2012 - Jun. 2013} % Date(s)
-{ % Description(s) of tasks/responsibilities
-\begin{cvitems}
-\item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
+\item {Création d'une plateforme SaaS pour entrepreneurs comptant déjà 20 clients et en croissance constante}
+\item {Mise en place de partenariats stratégiques avec des incubateurs}
+\item {Développement de technologies de pointe pour la génération automatisée de business plans}
+\item {Conception orientée vers des marchés de niche avec un modèle d'abonnement}
+\item {Technologies: React, TypeScript, PostgreSQL, Prisma, Neon, OpenAI API}
 \end{cvitems}
 }
+\vspace{1.5em}
 
 %------------------------------------------------
 
 \cventry
-{Software Engineer} % Job title
-{ShitOne Corp. (Start-up company)} % Organization
-{Seoul, S.Korea} % Location
-{Dec. 2011 - Feb. 2012} % Date(s)
+{Full Stack Engineer} % Job title
+{TotalEnergies} % Organization
+{Danemark} % Location
+{Août 2022 - Mars 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
+\item {Direction de projets techniques en équipe restreinte (1-5 personnes) avec des budgets de 50K à 200K euros}
+\item {Développement d'une solution de prévention d'accidents ayant réduit de 30\% les incidents en environnement industriel}
+\item {Optimisation des performances de modèles de langage par fine-tuning LLM pour l'analyse de rapports techniques}
+\item {Création d'une application de recherche d'emploi interne améliorant de 40\% la mobilité entre départements}
+\item {Conception de micro-logiciels d'extraction SAP réduisant de 70\% le temps d'accès aux données critiques}
+\item {Implémentation de solutions de computer vision pour l'automatisation du traitement de factures}
+\item {Architecture de data warehouses et de systèmes d'analyse prédictive pour les données IoT offshore}
 \end{cvitems}
 }
+\vspace{1.5em}
 
 %------------------------------------------------
 
 \cventry
-{Freelance Penetration Tester} % Job title
-{SAMSUNG Electronics} % Organization
-{S.Korea} % Location
-{Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
+{Data Scientist} % Job title
+{CGI} % Organization
+{Toulouse, France} % Location
+{Juillet 2020 - Juin 2022} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-\item {Conducted penetration testing on SAMSUNG Smart TV.}
+\item {Conception et implémentation d'un Chat Bot basé sur l'indexation de documentation technique}
+\item {Amélioration de la navigation utilisateur dans des environnements logiciels complexes}
+\item {Traitement et indexation de documentation pour une recherche intelligente et contextualisée}
+\item {Implémentation d'une solution AWS pour la migration de données entre environnements hétérogènes}
+\item {Analyse de données d'activité web pour personnaliser les parcours utilisateurs}
+\end{cvitems}
+}
+\vspace{1.5em}
+
+%------------------------------------------------
+
+\cventry
+{Chargé de Travaux Pratiques} % Job title
+{Université Paul Sabatier Toulouse III} % Organization
+{Toulouse, France} % Location
+{Juin 2020 - Août 2020} % Date(s)
+{ % Description(s) of tasks/responsibilities
+\begin{cvitems}
+\item {Enseignement des fondamentaux d'algèbre linéaire, statistiques et régressions multivariées}
+\item {Introduction aux modèles de Machine Learning et aux méthodes statistiques}
+\item {Création d'exercices pratiques pour étudiants en Master de Mathématiques}
+\end{cvitems}
+}
+\vspace{1.5em}
+
+%------------------------------------------------
+
+\cventry
+{Data Scientist} % Job title
+{CIMPA PLM Services} % Organization
+{Toulouse, France} % Location
+{Mai 2018 - Août 2018} % Date(s)
+{ % Description(s) of tasks/responsibilities
+\begin{cvitems}
+\item {Développement de modèles de machine learning pour la détection d'anomalies dans les logs de logiciels embarqués}
+\item {Évaluation et comparaison de performances d'algorithmes pour sélectionner les solutions optimales}
+\item {Analyse de tendances pour l'amélioration continue des modèles de détection}
 \end{cvitems}
 }
 
