--- a/resume_cv.tex
+++ b/resume_cv.tex
@@ -31,7 +31,7 @@
 \fontdir[fonts/] % Specify the location of the included fonts
 
 % Color for highlights
-\colorlet{awesome}{awesome-red} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
+\colorlet{awesome}{awesome-skyblue} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
 %\definecolor{awesome}{HTML}{CA63A8} % Uncomment if you would like to specify your own color
 
 % Colors for text - uncomment and modify
@@ -47,26 +47,23 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Claud D.}{Park}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
-\mobile{(+82) 10-9030-1843}
+\name{Manoel}{Da Ponte}
+\address{390 route de Saint Simon, Toulouse, France}
+\mobile{(+33) 6 82 69 71 32}
 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
-%\skype{skypeid}
+\email{daponte.manoel@gmail.com}
+\homepage{manoel-daponte.com}
+\linkedin{manoel-daponte-4092ab139}
+%\github{username}
+%\skype{username}
 %\stackoverflow{SOid}{SOname}
-%\twitter{@twit}
-%\linkedin{linkedin name}
-%\reddit{reddit account}
-%\xing{xing name}
-%\extrainfo{test} % Other text you want to include on this line
+%\twitter{@username}
+\extrainfo{Permis B + véhicule}
 
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert} % Your expertise/fields
-\quote{``Make the change that you want to see in the world."} % A quote or statement
+\position{Senior Full Stack Engineer} % Your expertise/fields
+\quote{Spécialisé dans l'ingénierie de données et le développement full-stack, je conçois des solutions analytiques innovantes en m'appuyant sur ma formation en informatique et mathématiques.} % A quote or statement
 
-\makecvfooter{\today}{Claud D. Park~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
+\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
 
 %----------------------------------------------------------------------------------------
 
@@ -82,14 +79,7 @@
 \input{cv-sections/education.tex}
 \input{cv-sections/skills.tex}
 \input{cv-sections/experience.tex}
-
-\newpage % Force a new page for looks
-
-\input{cv-sections/extracurricular.tex}
-\input{cv-sections/honors.tex}
-\input{cv-sections/presentation.tex}
-\input{cv-sections/writing.tex}
-\input{cv-sections/committees.tex}
+\input{cv-sections/projects.tex}
 
 %----------------------------------------------------------------------------------------
 
