--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -14,54 +14,29 @@
 
 \cventry
 {Diplômé} % Status
-{Master 2 (M2), Statistique et Informatique Décisionnelle} % Degree
+{Master, Statistique et Informatique Décisionnelle} % Degree
 {Université Paul Sabatier Toulouse III} % Institution
-{2018 - 2021} % Date(s)
-{ % Description(s) bullet points
-\begin{cvitems}
-\item {Projet de Master: Développement d'un algorithme de recommandation pour Sens Critique}
-\item {Spécialisation en NLP (Natural Language Processing) et techniques d'analyse avancées}
-\end{cvitems}
-}
-\vspace{1.5em}
+{2019 - 2021} % Date(s)
+{} % Description(s) bullet points
 
 %------------------------------------------------
 
 \cventry
 {Diplômé} % Status
-{Licence 3, Mathématiques Appliquées aux Sciences Humaines et Sociales} % Degree
-{Université Toulouse - Jean Jaurès} % Institution
-{2017 - 2018} % Date(s)
-{ % Description(s) bullet points
-\begin{cvitems}
-\end{cvitems}
-}
+{Licence, Mathématiques Appliquées aux Sciences Humaines et Sociales} % Degree
+{Université Jean Jaurès Toulouse II} % Institution
+{2018 - 2019} % Date(s)
+{} % Description(s) bullet points
 
 %------------------------------------------------
-
-\end{cventries}
-
-%------------------------------------------------
-%	SECTION TITLE
-%----------------------------------------------------------------------------------------
-
-\cvsection{Certifications}
-
-%----------------------------------------------------------------------------------------
-%	SECTION CONTENT
-%----------------------------------------------------------------------------------------
-
-\begin{cventries}
 
 \cventry
-{En cours d'obtention} % Status
-{Azure Data Engineer Associate} % Certification
-{Microsoft} % Institution
-{2025} % Date(s)
-{ % Description(s) bullet points
-\begin{cvitems}
-\item {Certification axée sur la conception et l'implémentation de solutions de données sur Azure}
-\end{cvitems}
-}
+{Diplômé} % Status
+{DUT, Statistique et Informatique Décisionnelle} % Degree
+{Université de Caen } % Institution
+{2016 - 2018} % Date(s)
+{} % Description(s) bullet points
+
+%------------------------------------------------
 
 \end{cventries}
