--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -13,17 +13,18 @@
 %------------------------------------------------
 
 \cventry
-{Chief Technology Officer \& Cofondateur} % Job title
+{Cofondateur \& Développeur} % Job title
 {Wise Twin} % Organization
 {Toulouse, France} % Location
 {Avril 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Création et commercialisation de 3 formations sur mesure pour différents organismes, incluant H2V parmi nos clients}
-\item {Développement de technologies d'intégration pour optimiser les builds dans des projets React et réduire les temps de réponse}
+\item {WiseTwin est une plateforme de formation 3D destinée aux techniciens et opérateurs, offrant des environnements interactifs sur mesure avec suivi de progression et gamification.}
+\item {Création et commercialisation de formations sur mesure pour différents organismes, incluant H2V parmi nos clients}
+\item {Développement de technologies d'intégration pour optimiser les builds Unity dans des projets React}
 \item {Conception et déploiement de solutions SaaS B2B avec une approche orientée entreprise}
 \item {Supervision complète du cycle de développement, de la conception à la mise en production}
-\item {Technologies: React, Node.js, AWS, Cloud Serverless, MongoDB}
+\item {Technologies: Next.js, Node.js, Azure, Cloud Serverless, Auth0, Postgres, ThingsBoard, Unity}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -31,13 +32,13 @@
 %------------------------------------------------
 
 \cventry
-{Fondateur \& Développeur Full Stack} % Job title
+{Cofondateur \& Développeur} % Job title
 {Bootstrap-Now} % Organization
 {Toulouse, France} % Location
 {Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Création d'une plateforme SaaS pour entrepreneurs comptant déjà 20 clients et en croissance constante}
+\item {Création d'une plateforme SaaS pour entrepreneurs actuellement en exploitation}
 \item {Mise en place de partenariats stratégiques avec des incubateurs}
 \item {Développement de technologies de pointe pour la génération automatisée de business plans}
 \item {Conception orientée vers des marchés de niche avec un modèle d'abonnement}
@@ -52,7 +53,7 @@
 {Full Stack Engineer} % Job title
 {TotalEnergies} % Organization
 {Danemark} % Location
-{Août 2022 - Mars 2024} % Date(s)
+{Mars 2022 - Février 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Direction de projets techniques en équipe restreinte (1-5 personnes) avec des budgets de 50K à 200K euros}
@@ -62,6 +63,7 @@
 \item {Conception de micro-logiciels d'extraction SAP réduisant de 70\% le temps d'accès aux données critiques}
 \item {Implémentation de solutions de computer vision pour l'automatisation du traitement de factures}
 \item {Architecture de data warehouses et de systèmes d'analyse prédictive pour les données IoT offshore}
+\item {Technologies: Python, React, AWS Lambda, Computer Vision, NLP, Tensorflow, PyTorch}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -72,7 +74,7 @@
 {Data Scientist} % Job title
 {CGI} % Organization
 {Toulouse, France} % Location
-{Juillet 2020 - Juin 2022} % Date(s)
+{Juillet 2020 - Mars 2022} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Conception et implémentation d'un Chat Bot basé sur l'indexation de documentation technique}
@@ -80,40 +82,10 @@
 \item {Traitement et indexation de documentation pour une recherche intelligente et contextualisée}
 \item {Implémentation d'une solution AWS pour la migration de données entre environnements hétérogènes}
 \item {Analyse de données d'activité web pour personnaliser les parcours utilisateurs}
+\item {Technologies: Python, AWS, Natural Language Processing, SQL, Elasticsearch}
 \end{cvitems}
 }
 \vspace{1.5em}
-
-%------------------------------------------------
-
-\cventry
-{Chargé de Travaux Pratiques} % Job title
-{Université Paul Sabatier Toulouse III} % Organization
-{Toulouse, France} % Location
-{Juin 2020 - Août 2020} % Date(s)
-{ % Description(s) of tasks/responsibilities
-\begin{cvitems}
-\item {Enseignement des fondamentaux d'algèbre linéaire, statistiques et régressions multivariées}
-\item {Introduction aux modèles de Machine Learning et aux méthodes statistiques}
-\item {Création d'exercices pratiques pour étudiants en Master de Mathématiques}
-\end{cvitems}
-}
-\vspace{1.5em}
-
-%------------------------------------------------
-
-\cventry
-{Data Scientist} % Job title
-{CIMPA PLM Services} % Organization
-{Toulouse, France} % Location
-{Mai 2018 - Août 2018} % Date(s)
-{ % Description(s) of tasks/responsibilities
-\begin{cvitems}
-\item {Développement de modèles de machine learning pour la détection d'anomalies dans les logs de logiciels embarqués}
-\item {Évaluation et comparaison de performances d'algorithmes pour sélectionner les solutions optimales}
-\item {Analyse de tendances pour l'amélioration continue des modèles de détection}
-\end{cvitems}
-}
 
 %------------------------------------------------
 
