--- a/cv-sections/projects.tex
+++ b/cv-sections/projects.tex
@@ -14,12 +14,12 @@
 
 \cventry
 {Développeur Principal} % Role
-{Formations 3D pour Environnements à Risque} % Project
+{Jeu vidéo pour Environnements à Risque} % Project
 {Toulouse, France} % Location
 {2024} % Date(s)
 { % Description(s)
 \begin{cvitems}
-\item {Conception et développement d'un jeu et de formations en 3D pour l'entraînement sécurisé en environnements dangereux}
+\item {Conception et développement d'un jeu en 3D pour l'entraînement sécurisé en environnements dangereux}
 \item {Création de scripts Unity et animations pour simuler des situations à risque sans exposition réelle}
 \item {Intégration de mécanismes de progression et d'évaluation des compétences}
 \item {Technologies: Unity, C\#, Scripting avancé}
@@ -32,7 +32,7 @@
 \cventry
 {Développeur Open Source} % Role
 {Outils de Transcription Audio et Modération Twitch} % Project
-{} % Location
+{Rouen, France} % Location
 {2023} % Date(s)
 { % Description(s)
 \begin{cvitems}
@@ -40,6 +40,7 @@
 \item {Création d'un plugin de modération intégrable pour streamers Twitch}
 \item {Contribution à l'écosystème open source}
 \item {Technologies: Node.js, WebRTC, API Twitch}
+\item {Code disponible sur daponte-manoel.com}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -59,23 +60,6 @@
 \item {Technologies: Python, NLP, Classification, Fairness algorithms}
 \end{cvitems}
 }
-\vspace{1.5em}
-
-%------------------------------------------------
-
-\cventry
-{Analyste de Données} % Role
-{Détection d'Anomalies dans les Données de Vol} % Project
-{Collaboration Airbus} % Location
-{2019 - 2020} % Date(s)
-{ % Description(s)
-\begin{cvitems}
-\item {Analyse de grands volumes de données provenant de logiciels embarqués sur avions}
-\item {Développement de modèles prédictifs pour l'identification précoce d'anomalies potentielles}
-\item {Technologies: Python, Machine Learning, Big Data}
-\end{cvitems}
-}
-\vspace{1.5em}
 
 %------------------------------------------------
 
