--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -13,50 +13,56 @@
 %------------------------------------------------
 
 \cvskill
-{Technologies Cloud} % Category
-{Azure, AWS, Déploiement CI/CD, Conteneurisation, Serverless} % Skills
+{Développement Frontend} % Category
+{Next.js, Tailwind, Dash} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Intelligence Artificielle} % Category
-{NLP, LLM Fine-tuning, Computer Vision, Modèles Prédictifs, Anomaly Detection} % Skills
+{Développement Backend} % Category
+{Python, Node.js, C\#} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Développement Full-Stack} % Category
-{React, Node.js, Python, API REST, CSS, Tailwind} % Skills
+{Développement API} % Category
+{FastAPI, API REST} % Skills
+%------------------------------------------------
+
+\cvskill
+{DevOps \& Déploiement} % Category
+{Docker, Vercel, AWS, Azure, Ubuntu} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Statistiques \& Modélisation} % Category
+{Régression linéaire/logistique, Tests d'hypothèses, ANOVA, Clustering, Réduction dimensionnelle, ...} % Skills
+
+%------------------------------------------------
+
+
+\cvskill
+{Data Science \& IA} % Category
+{Machine Learning, Deep Learning, NLP, Computer Vision, Séries temporelles, ...} % Skills
 
 %------------------------------------------------
 
 \cvskill
 {Base de données} % Category
-{PostgreSQL, Prisma, Neon, MongoDB, Neo4j, Data Warehousing, ETL} % Skills
-
-%------------------------------------------------
-
-\cvskill
-{DevOps} % Category
-{Git, Docker, Kubernetes} % Skills
-
-%------------------------------------------------
-
-\cvskill
-{Langages de programmation} % Category
-{Python, JavaScript, TypeScript, C\#} % Skills
+{PostgreSQL, MongoDB, Neo4j} % Skills
 
 %------------------------------------------------
 
 \cvskill
 {Développement 3D} % Category
-{Unity (scripts, animations), Intégration fonctionnelle} % Skills
+{Unity} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Entrepreneuriat} % Category
-{Identification de niches, Modèle SaaS, Analyse de marché, Business Planning} % Skills
+{Language de programmation} % Category
+{Python, SQL, JavaScript, HTML, C\#} % Skills
 
 %------------------------------------------------
 
@@ -67,19 +73,3 @@
 %------------------------------------------------
 
 \end{cvskills}
-\vspace{1.5em}
-
-%----------------------------------------------------------------------------------------
-%	SECTION TITLE
-%----------------------------------------------------------------------------------------
-
-\cvsection{Profil personnel}
-
-%----------------------------------------------------------------------------------------
-%	SECTION CONTENT
-%----------------------------------------------------------------------------------------
-
-\begin{cvparagraph}
-Ingénieur full-stack spécialisé dans la création de solutions SaaS et l'application de technologies avancées aux besoins métier. Expérience internationale acquise au Danemark. Capacité à identifier des marchés de niche et à développer rapidement des produits end-to-end avec des équipes restreintes. Approche pragmatique privilégiant l'agilité et l'innovation. Particulièrement efficace en startup et environnements dynamiques.
-\end{cvparagraph}
-\vspace{1.5em}
