--- a/resume_cv.tex
+++ b/resume_cv.tex
@@ -2,49 +2,21 @@
 % Awesome Resume/CV
 % XeLaTeX Template
 % Version 1.3 (30/3/2020)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Claud D. Park (posquit0.bj@gmail.com) with modifications by 
-% Vel (vel@latextemplates.com)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-% Important note:
-% This template must be compiled with XeLaTeX, the below lines will ensure this
-%!TEX TS-program = xelatex
-%!TEX encoding = UTF-8 Unicode
-%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+\documentclass[11pt, a4paper]{awesome-cv}
 
-\documentclass[11pt, a4paper]{awesome-cv} % A4 paper size by default, use 'letterpaper' for US letter
+\geometry{left=2cm, top=1.5cm, right=2cm, bottom=2cm, footskip=.5cm}
 
-\geometry{left=2cm, top=1.5cm, right=2cm, bottom=2cm, footskip=.5cm} % Configure page margins with geometry
-
-\fontdir[fonts/] % Specify the location of the included fonts
+\fontdir[fonts/]
 
 % Color for highlights
-\colorlet{awesome}{awesome-skyblue} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
-%\definecolor{awesome}{HTML}{CA63A8} % Uncomment if you would like to specify your own color
+\colorlet{awesome}{awesome-skyblue}
 
-% Colors for text - uncomment and modify
-%\definecolor{darktext}{HTML}{414141}
-%\definecolor{text}{HTML}{414141}
-%\definecolor{graytext}{HTML}{414141}
-%\definecolor{lighttext}{HTML}{414141}
-
-\renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad} % If you would like to change the social information separator from a pipe (|) to something else
+\renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 
 %----------------------------------------------------------------------------------------
 %	PERSONAL INFORMATION
-%	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
 \name{Manoel}{Da Ponte}
@@ -53,23 +25,18 @@
 
 \email{daponte.manoel@gmail.com}
 \homepage{manoel-daponte.com}
-\linkedin{manoel-daponte-4092ab139}
-%\github{username}
-%\skype{username}
-%\stackoverflow{SOid}{SOname}
-%\twitter{@username}
-\extrainfo{Permis B + véhicule}
+\linkedin{manoel-da-ponte-4092ab139}
 
-\position{Senior Full Stack Engineer} % Your expertise/fields
-\quote{Spécialisé dans l'ingénierie de données et le développement full-stack, je conçois des solutions analytiques innovantes en m'appuyant sur ma formation en informatique et mathématiques.} % A quote or statement
+\position{Full Stack Engineer}
+\quote{Spécialisé dans l'ingénierie de données et le développement full-stack, je conçois des solutions analytiques innovantes avec une approche orientée résultats et business value.}
 
-\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
+\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{\thepage}
 
 %----------------------------------------------------------------------------------------
 
 \begin{document}
 
-\makecvheader % Print the header
+\makecvheader
 
 %----------------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
@@ -77,7 +44,9 @@
 %----------------------------------------------------------------------------------------
 
 \input{cv-sections/education.tex}
+\input{cv-sections/certification.tex}
 \input{cv-sections/skills.tex}
+\input{cv-sections/profile.tex}
 \input{cv-sections/experience.tex}
 \input{cv-sections/projects.tex}
 
