--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -13,18 +13,18 @@
 %------------------------------------------------
 
 \cventry
-{Cofondateur \& Développeur} % Job title
+{Cofondateur \& Lead Developer} % Job title
 {Wise Twin} % Organization
 {Toulouse, France} % Location
-{Avril 2024 - Présent} % Date(s)
+{Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {WiseTwin est une plateforme de formation 3D destinée aux techniciens et opérateurs, offrant des environnements interactifs sur mesure avec suivi de progression et gamification.}
-\item {Création et commercialisation de formations sur mesure pour différents organismes, incluant H2V parmi nos clients}
-\item {Développement de technologies d'intégration pour optimiser les builds Unity dans des projets React}
-\item {Conception et déploiement de solutions SaaS B2B avec une approche orientée entreprise}
-\item {Supervision complète du cycle de développement, de la conception à la mise en production}
-\item {Technologies: Next.js, Node.js, Azure, Cloud Serverless, Auth0, Postgres, ThingsBoard, Unity}
+\item {Direction complète du développement technique d'une plateforme SaaS de formation 3D immersive pour techniciens industriels}
+\item {Conception et implémentation d'une architecture intégrant des builds Unity dans un environnement web React}
+\item {Développement d'environnements 3D pour former des techniciens sur des installations sensibles comme des centrales électriques}
+\item {Création d'une infrastructure de base de données optimisée pour l'analyse en temps réel des performances des apprenants}
+\item {Mise en place d'un pipeline CI/CD pour automatiser les déploiements et maintenir une qualité de code élevée}
+\item {Technologies: React/Next.js, Python, Node.js, Unity, Azure, Ubuntu Server, PostgreSQL, ThingsBoard, Node.js}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -32,17 +32,18 @@
 %------------------------------------------------
 
 \cventry
-{Cofondateur \& Développeur} % Job title
+{Cofondateur \& Lead Developer} % Job title
 {Bootstrap-Now} % Organization
 {Toulouse, France} % Location
 {Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Création d'une plateforme SaaS pour entrepreneurs actuellement en exploitation}
-\item {Mise en place de partenariats stratégiques avec des incubateurs}
-\item {Développement de technologies de pointe pour la génération automatisée de business plans}
-\item {Conception orientée vers des marchés de niche avec un modèle d'abonnement}
-\item {Technologies: React, TypeScript, PostgreSQL, Prisma, Neon, OpenAI API}
+\item {Conception et développement d'une plateforme SaaS facilitant l'accès des auto-entrepreneurs au marché}
+\item {Création d'un outil propriétaire de recherche d'opportunités business utilisant des algorithmes d'agrégation de données multicanaux}
+\item {Développement d'un générateur de business plans collaboratif associant intelligence artificielle et expertise humaine}
+\item {Conception d'une solution d'analyse de marché semi-automatisée guidant les utilisateurs dans leur étude de viabilité}
+\item {Établissement de partenariats stratégiques avec des incubateurs pour renforcer l'écosystème entrepreneurial}
+\item {Technologies: React/Next.js, Node.js, PostgreSQL, Prisma, OpenAI API, Vercel}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -50,20 +51,20 @@
 %------------------------------------------------
 
 \cventry
-{Full Stack Engineer} % Job title
+{Data Scientist} % Job title
 {TotalEnergies} % Organization
-{Danemark} % Location
+{Esbjerg, Danemark} % Location
 {Mars 2022 - Février 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Direction de projets techniques en équipe restreinte (1-5 personnes) avec des budgets de 50K à 200K euros}
-\item {Développement d'une solution de prévention d'accidents ayant réduit de 30\% les incidents en environnement industriel}
-\item {Optimisation des performances de modèles de langage par fine-tuning LLM pour l'analyse de rapports techniques}
-\item {Création d'une application de recherche d'emploi interne améliorant de 40\% la mobilité entre départements}
-\item {Conception de micro-logiciels d'extraction SAP réduisant de 70\% le temps d'accès aux données critiques}
-\item {Implémentation de solutions de computer vision pour l'automatisation du traitement de factures}
-\item {Architecture de data warehouses et de systèmes d'analyse prédictive pour les données IoT offshore}
-\item {Technologies: Python, React, AWS Lambda, Computer Vision, NLP, Tensorflow, PyTorch}
+\item {Réalisation de projets end-to-end en équipe restreinte (1-2 personnes) couvrant systématiquement les aspects data management, front-end et back-end}
+\item {Développement d'une solution de prévention d'accidents par extraction de données IoT, analyse de rapports textuels et création d'un data warehouse centralisé avec fine-tuning de modèles LLM}
+\item {Conception de micro-logiciels d'extraction massive de données SAP optimisant les processus d'accès à l'information pour les utilisateurs métier}
+\item {Implémentation d'un système de contrôle de factures utilisant la computer vision pour l'extraction de données et l'analyse prédictive pour l'optimisation des achats}
+\item {Création d'une architecture IoT offshore comprenant datawarehouse, détection d'anomalies, monitoring par Prefect et alertes SMTP}
+\item {Développement d'une application de mobilité interne intégrant des technologies IA avancées pour faciliter la recherche d'opportunités professionnelles à l'échelle du groupe}
+\item {Support technique pour le déploiement d'applications et scripts business sur Azure et On-Premise, avec automatisation via pipelines CI/CD}
+\item {Technologies: Python, React, Azure, Computer Vision, NLP, SQL, SAP, IoT, Prefect, SMTP, LLM}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -77,12 +78,12 @@
 {Juillet 2020 - Mars 2022} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Conception et implémentation d'un Chat Bot basé sur l'indexation de documentation technique}
-\item {Amélioration de la navigation utilisateur dans des environnements logiciels complexes}
-\item {Traitement et indexation de documentation pour une recherche intelligente et contextualisée}
-\item {Implémentation d'une solution AWS pour la migration de données entre environnements hétérogènes}
-\item {Analyse de données d'activité web pour personnaliser les parcours utilisateurs}
-\item {Technologies: Python, AWS, Natural Language Processing, SQL, Elasticsearch}
+\item {Conception et développement d'un Chat Bot intelligent basé sur l'indexation avancée de documentation technique pour faciliter l'accès à l'information}
+\item {Mise en place d'une architecture d'indexation et de recherche sémantique permettant une compréhension contextuelle des requêtes utilisateurs}
+\item {Optimisation de parcours utilisateurs dans des interfaces complexes grâce à l'analyse comportementale et l'implémentation de recommandations personnalisées}
+\item {Création d'une solution robuste de migration de données sur AWS permettant l'interopérabilité entre systèmes hétérogènes}
+\item {Développement d'algorithmes d'analyse pour extraire des insights actionnables à partir des données d'activité web et améliorer l'expérience utilisateur}
+\item {Technologies: Python, AWS, NLP, SQL, Elasticsearch, API REST}
 \end{cvitems}
 }
 \vspace{1.5em}
