--- a/cv-sections/projects.tex
+++ b/cv-sections/projects.tex
@@ -13,16 +13,16 @@
 %------------------------------------------------
 
 \cventry
-{Développeur Principal} % Role
-{Jeu vidéo pour Environnements à Risque} % Project
-{Toulouse, France} % Location
-{2024} % Date(s)
+{Développeur Open Source} % Role
+{Outils de Transcription Audio et Modération Twitch} % Project
+{Esbjerg, Danemark} % Location
+{2023} % Date(s)
 { % Description(s)
 \begin{cvitems}
-\item {Conception et développement d'un jeu en 3D pour l'entraînement sécurisé en environnements dangereux}
-\item {Création de scripts Unity et animations pour simuler des situations à risque sans exposition réelle}
-\item {Intégration de mécanismes de progression et d'évaluation des compétences}
-\item {Technologies: Unity, C\#, Scripting avancé}
+\item {Développement d'une solution complète de transcription audio automatisée}
+\item {Création d'un plugin de modération intégrable pour streamers Twitch}
+\item {Implémentation d'algorithmes de traitement du langage naturel pour la détection de contenu inapproprié}
+\item {Technologies: Python, Node.js, Next.js, API Twitch, API OpenAI}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -30,20 +30,20 @@
 %------------------------------------------------
 
 \cventry
-{Développeur Open Source} % Role
-{Outils de Transcription Audio et Modération Twitch} % Project
+{Développeur Principal} % Role
+{Developpement Jeu vidéo} % Project
 {Rouen, France} % Location
-{2023} % Date(s)
+{2022} % Date(s)
 { % Description(s)
 \begin{cvitems}
-\item {Développement d'une solution de transcription audio automatisée}
-\item {Création d'un plugin de modération intégrable pour streamers Twitch}
-\item {Contribution à l'écosystème open source}
-\item {Technologies: Node.js, WebRTC, API Twitch}
-\item {Code disponible sur daponte-manoel.com}
+\item {Conception et développement d'un prototype de jeu vidéo en 3D avec fonctionnalités multijoueur}
+\item {Implémentation d'une architecture réseau peer-to-peer pour les interactions en temps réel}
+\item {Création de systèmes d'animation avancés et programmation de scripts de gameplay}
+\item {Technologies: Unity, C\#, Networking, Animation}
 \end{cvitems}
 }
 \vspace{1.5em}
+
 
 %------------------------------------------------
 
@@ -51,7 +51,7 @@
 {Data Scientist} % Role
 {Classification NLP avec Correction de Biais} % Project
 {Compétition Kaggle} % Location
-{2020 - 2021} % Date(s)
+{2021} % Date(s)
 { % Description(s)
 \begin{cvitems}
 \item {Participation en équipe de 3 étudiants à une compétition internationale (3ème place sur le podium)}
