--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -62,7 +62,7 @@
 
 \cvskill
 {Language de programmation} % Category
-{Python, SQL, JavaScript, HTML, C\#} % Skills
+{Python, SQL, JavaScript, HTML, C\#, CSS} % Skills
 
 %------------------------------------------------
 
