--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -22,7 +22,7 @@
 \item {Direction complète du développement technique d'une plateforme SaaS de formation 3D immersive pour techniciens industriels}
 \item {Conception et implémentation d'une architecture intégrant des builds Unity dans un environnement web React}
 \item {Développement d'environnements 3D pour former des techniciens sur des installations sensibles comme des centrales électriques}
-\item {Création d'une infrastructure de base de données optimisée pour l'analyse en temps réel des performances des apprenants}
+\item {Création d'une infrastructure de base de données optimisée pour l'analyse en temps réel des performances des utilisateurs}
 \item {Mise en place d'un pipeline CI/CD pour automatiser les déploiements et maintenir une qualité de code élevée}
 \item {Technologies: React/Next.js, Python, Node.js, Unity, Azure, Ubuntu Server, PostgreSQL, ThingsBoard, Node.js}
 \end{cvitems}
@@ -57,7 +57,7 @@
 {Mars 2022 - Février 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Réalisation de projets end-to-end en équipe restreinte (1-2 personnes) couvrant systématiquement les aspects data management, front-end et back-end}
+\item {Réalisation de projets end-to-end en équipe restreinte (1-3 personnes) couvrant systématiquement les aspects data management, front-end et back-end}
 \item {Développement d'une solution de prévention d'accidents par extraction de données IoT, analyse de rapports textuels et création d'un data warehouse centralisé avec fine-tuning de modèles LLM}
 \item {Conception de micro-logiciels d'extraction massive de données SAP optimisant les processus d'accès à l'information pour les utilisateurs métier}
 \item {Implémentation d'un système de contrôle de factures utilisant la computer vision pour l'extraction de données et l'analyse prédictive pour l'optimisation des achats}
