--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -14,28 +14,30 @@
 
 \cventry
 {Diplômé} % Status
-{Master, Statistique et Informatique Décisionnelle} % Degree
+{Master Science et Ingénierie des Données} % Degree
 {Université Paul Sabatier Toulouse III} % Institution
 {2019 - 2021} % Date(s)
-{} % Description(s) bullet points
+{Formation approfondie en data engineering couvrant la collecte, le stockage et l'analyse statistique des données massives.} % Description
+
 
 %------------------------------------------------
 
 \cventry
 {Diplômé} % Status
-{Licence, Mathématiques Appliquées aux Sciences Humaines et Sociales} % Degree
+{Licence MIASHS parcours Mathématiques} % Degree
 {Université Jean Jaurès Toulouse II} % Institution
 {2018 - 2019} % Date(s)
-{} % Description(s) bullet points
+{Formation pluridisciplinaire associant mathématiques appliquées, informatique et sciences humaines et sociales.} % Description
 
 %------------------------------------------------
 
 \cventry
 {Diplômé} % Status
-{DUT, Statistique et Informatique Décisionnelle} % Degree
-{Université de Caen } % Institution
+{DUT Statistique et Informatique Décisionnelle} % Degree
+{Université de Caen} % Institution
 {2016 - 2018} % Date(s)
-{} % Description(s) bullet points
+{Formation en statistique et informatique pour l'analyse et la modélisation des données d'aide à la décision.} % Description
+
 
 %------------------------------------------------
 
