--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -14,7 +14,7 @@
 
 \cventry
 {Cofondateur \& Lead Developer} % Job title
-{Wise Twin} % Organization
+{\href{https://www.wisetwin.eu}{Wise-Twin {\tiny\textcolor{black}{\faExternalLink}}}} % Organization avec lien et icône noire plus petite
 {Toulouse, France} % Location
 {Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
@@ -27,13 +27,14 @@
 \item {Technologies: React/Next.js, Python, Node.js, Unity, Azure, Ubuntu Server, PostgreSQL, ThingsBoard, Node.js}
 \end{cvitems}
 }
+
 \vspace{1.5em}
 
 %------------------------------------------------
 
 \cventry
 {Cofondateur \& Lead Developer} % Job title
-{Bootstrap-Now} % Organization
+{\href{https://www.bootstrap-now.com}{Bootstrap-Now {\tiny\textcolor{black}{\faExternalLink}}}}
 {Toulouse, France} % Location
 {Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
@@ -51,7 +52,7 @@
 %------------------------------------------------
 
 \cventry
-{Data Scientist} % Job title
+{Data Engineer} % Job title
 {TotalEnergies} % Organization
 {Esbjerg, Danemark} % Location
 {Mars 2022 - Février 2024} % Date(s)
