--- a/cv-sections/profile.tex
+++ b/cv-sections/profile.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Profil personnel}
+\cvsection{Profil Personnel}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
