--- a/cv-sections/projects.tex
+++ b/cv-sections/projects.tex
@@ -14,20 +14,41 @@
 
 \cventry
 {Développeur Open Source} % Role
-{Outils de Transcription Audio et Modération Twitch} % Project
+{Outil de Transcription Audio} % Project
 {Esbjerg, Danemark} % Location
 {2023} % Date(s)
 { % Description(s)
 \begin{cvitems}
 \item {Développement d'une solution complète de transcription audio automatisée}
-\item {Création d'un plugin de modération intégrable pour streamers Twitch}
-\item {Implémentation d'algorithmes de traitement du langage naturel pour la détection de contenu inapproprié}
-\item {Technologies: Python, Node.js, Next.js, API Twitch, API OpenAI}
+\item {Implémentation d'une API Python pour le traitement des fichiers audio}
+\item {Création d'une interface utilisateur intuitive avec Next.js}
+\item {Intégration de modèles avancés de Speech-to-Text avec optimisation pour différentes langues}
+\item {Technologies: Python, Node.js, Next.js, API OpenAI, AWS}
 \end{cvitems}
 }
 \vspace{1.5em}
 
 %------------------------------------------------
+
+\cventry
+{Développeur Open Source} % Role
+{Plugin de Modération Twitch} % Project
+{Esbjerg, Danemark} % Location
+{2023} % Date(s)
+{ % Description(s)
+\begin{cvitems}
+\item {Création d'un plugin de modération intégrable pour streamers Twitch}
+\item {Implémentation d'algorithmes de traitement du langage naturel pour la détection de contenu inapproprié}
+\item {Analyse automatique des questions les plus fréquemment posées pour faciliter l'interaction avec l'audience}
+\item {Développement d'un système d'identification des topics et trends en temps réel dans le chat}
+\item {Conception d'un tableau de bord permettant une visualisation des statistiques d'engagement}
+\item {Technologies: Node.js, API Twitch, NLP, WebSockets, React, Data Visualization}
+\end{cvitems}
+}
+\vspace{1.5em}
+
+%------------------------------------------------
+
 
 \cventry
 {Développeur Principal} % Role
