--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -14,61 +14,61 @@
 
 \cvskill
 {Développement Frontend} % Category
-{Next.js, Tailwind, Dash} % Skills
+{Next.js, React, Tailwind CSS, Dash} % Skills alignées et uniformisées
 
 %------------------------------------------------
 
 \cvskill
 {Développement Backend} % Category
-{Python, Node.js, C\#} % Skills
+{Python, Node.js, C\#, FastAPI, API REST} % Regroupement des APIs avec le backend
 
 %------------------------------------------------
 
 \cvskill
-{Développement API} % Category
-{FastAPI, API REST} % Skills
-%------------------------------------------------
-
-\cvskill
-{DevOps \& Déploiement} % Category
-{Docker, Vercel, AWS, Azure, Ubuntu} % Skills
-
-%------------------------------------------------
-
-\cvskill
-{Statistiques \& Modélisation} % Category
-{Régression linéaire/logistique, Tests d'hypothèses, ANOVA, Clustering, Réduction dimensionnelle, ...} % Skills
-
-%------------------------------------------------
-
-
-\cvskill
-{Data Science \& IA} % Category
-{Machine Learning, Deep Learning, NLP, Computer Vision, Séries temporelles, ...} % Skills
+{DevOps \& Cloud} % Category
+{Docker, Vercel, AWS, Azure, Ubuntu Server} % Skills
 
 %------------------------------------------------
 
 \cvskill
 {Base de données} % Category
-{PostgreSQL, MongoDB, Neo4j} % Skills
+{PostgreSQL, MongoDB, Neo4j, SQL} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Data Science \& IA} % Category
+{Machine Learning, Deep Learning, NLP, Computer Vision, Séries temporelles} % Skills plus concises
+
+%------------------------------------------------
+
+\cvskill
+{Statistiques} % Category
+{Régression, Tests d'hypothèses, ANOVA, Clustering, Réduction dimensionnelle} % Skills
 
 %------------------------------------------------
 
 \cvskill
 {Développement 3D} % Category
-{Unity} % Skills
+{Unity, C\#} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Language de programmation} % Category
-{Python, SQL, JavaScript, HTML, C\#, CSS} % Skills
+{Langages de programmation} % Category
+{Python, JavaScript, SQL, HTML/CSS, C\#} % Skills regroupées logiquement
+
+%------------------------------------------------
+
+\cvskill
+{Certifications} % Category
+{Azure Data Engineer Associate (DP-203)} % Ajout des certifications ici
 
 %------------------------------------------------
 
 \cvskill
 {Langues} % Category
-{Français (natif), Anglais (professionnel)} % Skills
+{Français (natif), Anglais (C1)} % Mise à jour du niveau
 
 %------------------------------------------------
 
