--- a/cv-sections/skills-onepage.tex
+++ b/cv-sections/skills-onepage.tex
@@ -2,46 +2,38 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Program Committees}
+\cvsection{Compétences}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
 %----------------------------------------------------------------------------------------
 
-\begin{cvhonors}
+\begin{cvskills}
 
 %------------------------------------------------
 
-\cvhonor
-{Organizer \& Co-director} % Position
-{1st POSTECH Hackathon} % Committee
-{S.Korea} % Location
-{2013} % Date(s)
-    
-%------------------------------------------------
-
-\cvhonor
-{Staff} % Position
-{7th Hacking Camp} % Committee
-{S.Korea} % Location
-{2012} % Date(s)
+\cvskill
+{Développement} % Category
+{Frontend: Next.js, React, Tailwind CSS | Backend: Python, Node.js, FastAPI | 3D: Unity, C\#} % Skills condensées
 
 %------------------------------------------------
 
-\cvhonor
-{Problem Writer} % Position
-{1st Hoseo University Teenager Hacking Competition} % Committee
-{S.Korea} % Location
-{2012} % Date(s)
+\cvskill
+{Data \& IA} % Category
+{Machine Learning, NLP, Computer Vision, Séries temporelles, PostgreSQL, MongoDB, SQL} % Skills condensées
 
 %------------------------------------------------
 
-\cvhonor
-{Staff \& Problem Writer} % Position
-{JFF(Just for Fun) Hacking Competition} % Committee
-{S.Korea} % Location
-{2012} % Date(s)
+\cvskill
+{DevOps \& Cloud} % Category
+{Docker, Git, CI/CD, AWS, Azure, Ubuntu Server, Vercel} % Skills condensées
 
 %------------------------------------------------
 
-\end{cvhonors}
+\cvskill
+{Certifications \& Langues} % Category
+{Azure Data Engineer Associate (DP-203) | Français (natif), Anglais (C1)} % Certifications et langues regroupées
+
+%------------------------------------------------
+
+\end{cvskills}
